--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div id="container">
     <img src="/download (1).png" style = "height:100px ; width: 400px; align ="left" "  >
 
-    <h1 class = "padd">Sudoku Solver</h1>
+    <h1 class = "padd">Sudoku Solver by Ankit sharma</h1>
 
     <table id="sudoku-board">
       
